# protocols

./: .gitignore  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  benchmark_monitor.py  g.out  install.sh  justfile  plot_benchmark_results.py  pyproject.toml  test.txt  trace.fst  turnt.toml  well-formedness.md
bi/: Cargo.toml
bi/src/: bi.rs  bi2.rs  constraints.rs  main.rs  proto_trace.rs  signal_trace.rs
cli/: Cargo.toml
cli/src/: main.rs
filament-eval/: Cargo.toml
filament-eval/src/: main.rs  types.rs
graph-interp/: Cargo.toml
graph-interp/src/: main.rs
interp/: Cargo.toml
interp/src/: main.rs
protocols/: Cargo.toml
protocols/src/: air.rs  ascii_waveform.rs  ast.rs  backends.rs  design.rs  diagnostic.rs  dut.rs  errors.rs  interpreter.rs  ir.rs  lib.rs  parser.rs  protocols.pest  scheduler.rs  serialize.rs  setup.rs  sim.rs  static_checks.rs  static_fork_step_check.rs  transactions.pest  transactions_parser.rs  typecheck.rs  value.rs  yosys.rs
protocols/src/backends/: bmc_transition_system.rs  mod.rs  patronus_trace.rs  transition_system.rs  verilog.rs
protocols/src/frontend/: ast.rs  design.rs  diagnostic.rs  errors.rs  mod.rs  parser.rs  protocols.pest  remap.rs  serialize.rs  static_checks.rs  static_fork_step_check.rs  symbol.rs  transactions_parser.rs  typecheck.rs
protocols/src/ir/: bounded_lowering.rs  determinize.rs  edge-contraction.md  edge_contract.rs  fork_reach.rs  graph_interpreter.rs  graphviz.rs  ir.rs  lowering.rs  mod.rs  new_graph_interpreter.rs  propagate_assigns.rs  proto_graph.rs  reaching_defs.rs  trace_lowering.rs
protocols/src/transactions/: mod.rs  parser.rs
protocols/tests/: add_d2_trace.fst  graph_interp_allowlist.txt  turnt.toml
protocols/tests/adders/: illegal_fork.prot
protocols/tests/alu/: alu.v
protocols/tests/alus/: Readme.md  alu_d1.prot  alu_d1.rt  alu_d1.tx  alu_d1.v  alu_d2.prot  alu_d2.tx  alu_d2.v
protocols/tests/axis/: axis_truncated_include_idle.prot
protocols/tests/bounded_ready_valid/: bounded_rv.prot  toy_receiver_0.v  toy_reciever_0.tx  toy_reciever_1.tx  toy_reciever_2.tx  toy_reciever_3.graphout  toy_reciever_3.tx
protocols/tests/calyx_go_done/: calyx_go_done_struct.prot
protocols/tests/counters/: counter.out  counter.prot  counter.rt  counter.tx  simple_bounded_loop.prot  simple_for.prot  simple_if.prot  simple_while.prot
protocols/tests/edge/: edge.prot  edge.tx  edge.v
protocols/tests/fifo/: bsg_defines.v  bsg_fifo_1rw_large.v  bsg_mem_1rw_sync.v  fifo.prot  fifo.rt  fifo.tx  fifo_bounded_loop.prot  pop_before_push_fail.out  pop_before_push_fail.tx  pop_empty_fail.out  pop_empty_fail.tx  push_pop_conflict.out  push_pop_conflict.tx  push_pop_identity_ok.rt  push_pop_identity_ok.tx  push_pop_loop_empty.rt  push_pop_loop_empty.tx  push_pop_loop_not_empty.rt  push_pop_loop_not_empty.tx
protocols/tests/hazard_interfaces/: hazard_interface.prot
protocols/tests/inverters/: inverter_d0.out  inverter_d0.prot  inverter_d0.tx
protocols/tests/misc/: easycond.prot  func_arg_invalid.prot  invalid_lex.prot  invalid_step_arg.prot
protocols/tests/multipliers/: mul.prot  mul_ignore.prot  mul_invalid.prot  mult_cond.prot
protocols/tests/picorv32/: pcpi_mul_no_reset.prot  unsigned_mul_no_reset.out  unsigned_mul_no_reset.rt  unsigned_mul_no_reset.tx  unsigned_mul_no_reset_thread_assignment_persistence.out  unsigned_mul_no_reset_thread_assignment_persistence.tx
protocols/tests/priority_encoder/: priority_encoder.prot  priority_encoder.tx  priority_encoder.v
protocols/tests/serv/: serv_regfile.v
protocols/tests/snapshots/: protocols__serialize__tests__add_d1.snap  protocols__serialize__tests__add_d1.snap.new  protocols__serialize__tests__aes128_round.snap  protocols__serialize__tests__calyx_go_done_struct.snap  protocols__serialize__tests__calyx_go_done_struct.snap.new  protocols__serialize__tests__cond.snap  protocols__serialize__tests__cond.snap.new  protocols__serialize__tests__func_arg_invalid_prot.snap.new  protocols__serialize__tests__if_without_else.snap  protocols__serialize__tests__if_without_else.snap.new  protocols__serialize__tests__illegal_fork_prot.snap  protocols__serialize__tests__illegal_fork_prot.snap.new  protocols__serialize__tests__invalid_lex.snap.new  protocols__serialize__tests__invalid_step_arg.snap.new  protocols__serialize__tests__loop_with_assigns.snap  protocols__serialize__tests__loop_with_assigns.snap.new  protocols__serialize__tests__mul.snap  protocols__serialize__tests__mul.snap.new  protocols__serialize__tests__mul_ignore.snap  protocols__serialize__tests__mul_ignore.snap.new  protocols__serialize__tests__mul_invalid.snap  protocols__serialize__tests__mul_invalid.snap.new  protocols__serialize__tests__nested_bounded_loop.snap  protocols__serialize__tests__nested_bounded_loop.snap.new  protocols__serialize__tests__simple_bounded_loop.snap  protocols__serialize__tests__simple_bounded_loop.snap.new  protocols__serialize__tests__simple_for.snap  protocols__serialize__tests__simple_if.snap  protocols__serialize__tests__simple_if.snap.new  protocols__serialize__tests__simple_while.snap  protocols__serialize__tests__simple_while.snap.new  protocols__typecheck__tests__add_d1.snap  protocols__typecheck__tests__add_d1.snap.new  protocols__typecheck__tests__aes128_round.snap  protocols__typecheck__tests__calyx_go_done_struct.snap  protocols__typecheck__tests__calyx_go_done_struct.snap.new  protocols__typecheck__tests__cond.snap  protocols__typecheck__tests__cond.snap.new  protocols__typecheck__tests__invalid_step_arg.snap  protocols__typecheck__tests__invalid_step_arg.snap.new  (+10 more)
protocols/tests/tinyaes128/: aes128.prot
protocols/tests/wishbone/: .gitignore  Makefile  reqwalker.cpp  reqwalker.v  wishbone.prot  wishbone.tx
protocols/tests/wishbone_manager/: hbexec.v  wishbone_manager.prot  wishbone_manager.tx
python/: Cargo.toml  pyproject.toml
python/python/protocols/: __init__.py
python/src/: lib.rs
python/tests/: test_adder.py  test_lib.py
relaxer/: Cargo.toml
relaxer/src/: lib.rs  preprocess.rs
relaxer/tests/adders/: add_d1.prot  add_d2.prot
(+1730 files in other folders)
