[workspace]
resolver = "3"
members = ["bi","interp", "monitor", "protocols"]


[workspace.package]
authors = ["Nikil Shyamsunder", "Francis Pham", "Ernest Ng", "Kevin Laeufer"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/cucapra/protocols"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
protocols = { path = "protocols" }
baa = { version = "0.17.1", features = ["rand1"] }
patronus = "0.34.1"
rustc-hash = "2.1.1"
