[workspace]
resolver = "3"
members = ["bi", "interp", "monitor", "protocols", "cli", "graph-interp"]


[workspace.package]
authors = ["Nikil Shyamsunder", "Francis Pham", "Ernest Ng", "Kevin Laeufer"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/cucapra/protocols"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
protocols = { path = "protocols" }
baa = { version = "0.19.0", features = ["rand1"] }
patronus = { git="https://github.com/Nikil-Shyamsunder/patronus#" }
rustc-hash = "2.1.1"
