[package]
name = "bi"
version = "0.1.0"
description = "analyze signal traces to extract transactions"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
protocols.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
baa.workspace = true
patronus.workspace = true
wellen = "0.19.0"
log = "0.4.27"
rustc-hash.workspace = true