[package]
name = "filament_eval"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
protocols.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
