[package]
name = "protocols"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cranelift-entity = "0.114.0"
pest = "2.7.15"
pest_derive = "2.7.15"
rustc-hash = "2.1.0"
thiserror = "2.0.8"
codespan-reporting = "0.11.1"
lazy_static = "1.5.0"
tempfile = "3.20.0"
rand = "0.9"
log = "0.4.27"
baa.workspace = true
patronus.workspace = true

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
strip-ansi-escapes = "0.2"
