[package]
name = "protocols"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustc-hash.workspace = true
rand.workspace = true
log.workspace = true
baa.workspace = true
patronus.workspace = true
clap.workspace = true
anyhow.workspace = true
cranelift-entity = "0.114.0"
pest = "2.8.4"
pest_derive = "2.8.4"
itertools = "0.14.0"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.19"
codespan-reporting = "0.11.1"
lazy_static = "1.5.0"
tempfile = "3.23.0"

[dev-dependencies]
insta = { version = "1.44.1", features = ["yaml"] }
strip-ansi-escapes = "0.2"
