[package]
name = "protocols-relaxer"
version = "0.1.0"
description = "relax protocol specifications"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
protocols.workspace = true
baa.workspace = true
patronus.workspace = true
rustc-hash.workspace = true
